--- a/Salary-to-Hourly.html
+++ b/Salary-to-Hourly.html
@@ -41,18 +41,19 @@
                     </div>
                     <h2>Pay rate choice:</h2>
                     <div class="currency-selector">
-                        <button onclick="handlePayRateChoice('Hourly')" class="selected">Hourly</button>
-                        <button onclick="handlePayRateChoice('Daily')">Daily</button>
-                        <button onclick="handlePayRateChoice('Weekly')">Weekly</button>
+                        <button onclick="handlePayRateChoice('Annual')" class="selected">Annual</button>
                         <button onclick="handlePayRateChoice('Monthly')">Monthly</button>
-                        <button onclick="handlePayRateChoice('Annual')">Annual</button>
+                        <button onclick="handlePayRateChoice('Biweekly')">Biweekly</button>
+                        <button onclick="handlePayRateChoice('Weekly')">Weekly</button>
+                        <button onclick="handlePayRateChoice('Daily')">Daily</button>
                     </div>
                     <div class="input-group">
-                        <label for="hourly-wage">Hourly pay</label>
+                        <label for="hourly-wage">Salary: </label>
                         <div class="hourly-pay">
-                            <span id="selected-currency">€</span>
-                            <input type="number" id="hourly-wage" min="0" step="0.01"
-                                class="w-full p-2 mt-2 border border-gray-300 rounded-md" value="5">
+                            <span id="selected-currency">$</span>
+                            <input type="range" id="hourly-wage-slider" min="1000" max="10000" value="1000"
+                                class="w-full bg-black-500" oninput="updateSalaryWageValue()">
+                            <span id="hourly-wage" class="ml-3">1000</span>
                         </div>
                     </div>
                     <div class="input-main">
@@ -77,34 +78,41 @@
         <div class="flex-item">
             <div class="time-and-a-half-info">
                 <h1 class="info-heading">Time and a half Calculator</h1>
-                <p class="info-paragraph">This calculator provides an easy way to calculate the equivalent hourly
-                    wage
-                    based on your annual salary. It considers total hours worked per week, potential bonuses,
-                    and
-                    factors in vacation time into its calculations. You can always easily edit the calculator to
-                    suit
+                <p class="info-paragraph">This calculator provides an easy way to calculate the equivalent hourly wage
+                    based on your annual salary. It considers total hours worked per week, potential bonuses, and
+                    factors in vacation time into its calculations. You can always easily edit the calculator to suit
                     your specific needs, such as including different taxation factors, and any other additional
                     variables.</p>
                 <h2 class="font-bold text-xl mb-5">FORMULA</h2>
-                <p class="info-paragraph">Basic Salary = Gross Salary – Total Allowances (DA + HRA + Medical
-                    Insurance +
+                <p class="info-paragraph">Basic Salary = Gross Salary – Total Allowances (DA + HRA + Medical Insurance +
                     Other Allowances) or Basic salary = CTC x Percentage</p>
                 <h2 class="font-bold text-xl mb-5">WORKS BEST FOR</h2>
-                <p class="info-paragraph">The hourly wage calculator is perfect for personal use, accounting
-                    services
+                <p class="info-paragraph">The hourly wage calculator is perfect for personal use, accounting services
                     and companies.</p>
             </div>
         </div>
 
-        <div class="popup" id="popup">
+        <!-- <div class="popup" id="popup">
             <div class="popup-content">
                 <p>Please fill in all required fields with valid numeric values.</p>
                 <button class="popup-button" id="close-popup">Close</button>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script>
+        // Global variable to store the current pay rate choice
+        let currentPayRateChoice = 'Annual';
+
+        // Provided exchange rates
+        const exchangeRates = {
+            '$': { rate: 1, medianSalary: 56800 }, // USD is the base currency
+            '€': { rate: 0.85, medianSalary: 48767 }, // Placeholder median salary for Euro
+            '£': { rate: 0.75, medianSalary: 43000 }, // Placeholder median salary for Pound Sterling
+            '₹': { rate: 74.21, medianSalary: 905000 }, // Placeholder median salary for Indian Rupee
+            '¥': { rate: 114.41, medianSalary: 4000000 } // Placeholder median salary for Japanese Yen
+        };
+
         // Function to handle currency change
         function handleCurrencyChange(currency) {
             var selectedCurrencyElement = document.getElementById('selected-currency');
@@ -115,79 +123,71 @@
         function handlePayRateChoice(choice) {
             var hourlyPayLabel = document.querySelector('.input-group label');
             if (hourlyPayLabel) {
-                if (choice === 'Hourly') {
-                    hourlyPayLabel.textContent = 'Hourly pay rate:';
+                if (choice === 'Annual') {
+                    hourlyPayLabel.textContent = 'Salary:';
                 } else {
-                    hourlyPayLabel.textContent = 'Standard ' + choice.toLowerCase() + ' pay rate:';
+                    hourlyPayLabel.textContent = 'Standard ' + choice.toLowerCase() + ' pay:';
                 }
             }
+            // Update the global variable with the current pay rate choice
+            currentPayRateChoice = choice;
         }
 
-        // Function to calculate salary
-        function calculateRates() {
-            // Get input values
-            var selectedCurrency = document.getElementById('selected-currency').textContent;
-            var hourlyWage = parseFloat(document.getElementById('hourly-wage').value);
-            var hoursPerWeek = parseInt(document.getElementById('hours-per-week').value);
-            var weeksPerYear = parseInt(document.getElementById('weeks-per-year').value);
-            var payRateChoice = document.querySelector('.currency-selector button.selected').textContent;
+        const calculateRates = () => {
+            const currency = document.getElementById('selected-currency').textContent;
+            const salaryWage = parseFloat(document.getElementById('hourly-wage').innerText);
+            const hoursPerWeek = parseFloat(document.getElementById('hours-per-week').value);
+            const weeksPerYear = parseFloat(document.getElementById('weeks-per-year').value);
 
-            // Check if any input is empty or not a number
-            if (isNaN(hourlyWage) || isNaN(hoursPerWeek) || isNaN(weeksPerYear)) {
-                // Show popup
-                document.getElementById('popup').style.display = 'flex';
-                return;
+            if (!isNaN(salaryWage) && !isNaN(hoursPerWeek) && !isNaN(weeksPerYear) && hoursPerWeek !== 0 && weeksPerYear !== 0) {
+                let exchangeRate = exchangeRates[currency] ? exchangeRates[currency].rate : 1;
+
+                let hourly = 0;
+                let monthly = 0;
+                let weekly = 0;
+                let biweekly = 0;
+                let daily = 0;
+                const annualSalary = salaryWage * hoursPerWeek * weeksPerYear * exchangeRate;
+
+                if (salaryWage !== 0) {
+                    hourly = salaryWage / (hoursPerWeek * weeksPerYear);
+                }
+
+                if (currentPayRateChoice === 'Monthly') {
+                    monthly = (annualSalary / 12) / hoursPerWeek;
+                } else if (currentPayRateChoice === 'Biweekly') {
+                    biweekly = (annualSalary / 26) / hoursPerWeek;
+                } else if (currentPayRateChoice === 'Weekly') {
+                    weekly = (annualSalary / 52) / hoursPerWeek;
+                } else if (currentPayRateChoice === 'Daily') {
+                    daily = (annualSalary / 365) / hoursPerWeek;
+                }
+
+                document.getElementById('calculated-salary').innerHTML = '<h2>Results:</h2>' +
+                    '<p>Hourly Pay: ' + currency + ' ' + hourly.toFixed(2) + '</p>' +
+                    '<p>Monthly Pay (avg): ' + currency + ' ' + monthly.toFixed(2) + '</p>' +
+                    '<p>Per Week: ' + currency + ' ' + weekly.toFixed(2) + '</p>' +
+                    '<p>% of US median salary: ' + ((annualSalary / exchangeRates['$'].medianSalary) * 100).toFixed(1) + '%</p>';
+            } else {
+                document.getElementById('calculated-salary').innerHTML = "Please enter valid values for salary, hours per week, and weeks per year.";
             }
+        };
 
-            // Calculate total hours worked per year
-            var totalHours = hoursPerWeek * weeksPerYear;
-
-            // Calculate annual salary based on pay rate choice
-            var annualSalary;
-            switch (payRateChoice) {
-                case 'Hourly':
-                    annualSalary = hourlyWage * totalHours;
-                    break;
-                case 'Daily':
-                    annualSalary = hourlyWage * totalHours / 5 * 52; // Assuming 5 working days per week
-                    break;
-                case 'Weekly':
-                    annualSalary = hourlyWage * hoursPerWeek * 52; // Assuming 52 weeks per year
-                    break;
-                case 'Monthly':
-                    annualSalary = hourlyWage * totalHours / 4; // Assuming 4 weeks per month
-                    break;
-                case 'Annual':
-                    annualSalary = hourlyWage * totalHours;
-                    break;
-                default:
-                    annualSalary = 0;
-            }
-
-            // Calculate monthly and weekly pay
-            var monthlyPay = annualSalary / 12;
-            var weeklyPay = annualSalary / 52;
-
-            // Display calculated salary
-            document.getElementById('calculated-salary').innerHTML =
-                '<h2 class="text-xl font-semibold">Calculated Salary</h2>' +
-                '<p class="mt-2">Hourly Pay: ' + selectedCurrency + hourlyWage.toFixed(2) + '</p>' +
-                '<p class="mt-2">Monthly Pay (avg): ' + selectedCurrency + monthlyPay.toFixed(2) + '</p>' +
-                '<p class="mt-2">Per Week: ' + selectedCurrency + weeklyPay.toFixed(2) + '</p>';
+        function updateSalaryWageValue() {
+            var slider = document.getElementById('hourly-wage-slider');
+            var salaryWageSpan = document.getElementById('hourly-wage');
+            salaryWageSpan.textContent = slider.value;
         }
 
         document.addEventListener("DOMContentLoaded", function () {
             // Set default values
-            handleCurrencyChange('€');
-            handlePayRateChoice('Hourly');
+            handleCurrencyChange('$');
+            handlePayRateChoice('Annual');
 
             // Close popup
             document.getElementById('close-popup').addEventListener('click', function () {
                 document.getElementById('popup').style.display = 'none';
             });
-
-            // Event listener for calculate button
-            document.querySelector('.calculate-btn').addEventListener('click', calculateRates);
         });
     </script>
 
