--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
                     <h2>Currency</h2>
                     <div class="currency-selector">
                         <button onclick="handleCurrencyChange('$')" class="selected">$</button>
-                        <button onclick="handleCurrencyChange('€')" class="selected">€</button>
-                        <button onclick="handleCurrencyChange('£')" class="selected">£</button>
-                        <button onclick="handleCurrencyChange('₹')" class="selected">₹</button>
-                        <button onclick="handleCurrencyChange('¥')" class="selected">¥</button>
+                        <button onclick="handleCurrencyChange('€')">€</button>
+                        <button onclick="handleCurrencyChange('£')">£</button>
+                        <button onclick="handleCurrencyChange('₹')">₹</button>
+                        <button onclick="handleCurrencyChange('¥')">¥</button>
                     </div>
                     <div class="input-group">
                         <label for="hourly-wage">Hourly pay</label>
                         <div class="hourly-pay">
                             <span id="selected-currency">$</span>
-                            <input type="range" id="hourly-wage-slider" min="0" max="100" value="0"
-                                class="w-full bg-black-500">
-                            <span id="hourly-wage" class="ml-3">0</span>
+                            <input type="range" id="hourly-wage-slider" min="0" max="100" value="15"
+                                class="w-full bg-black-500" oninput="updateHourlyWageValue()">
+                            <span id="hourly-wage" class="ml-3">15</span>
                         </div>
                     </div>
                     <div class="input-group">
@@ -59,7 +59,7 @@
                             class="w-full p-2 mt-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
-                        <button class="calculate-btn" onclick="calculateRates()">Calculate</button>
+                        <button class="calculate-btn" id="calculate-btn" onclick="calculateRates()">Calculate</button>
                     </div>
                 </div>
             </div>
@@ -88,93 +88,108 @@
         </div>
 
         <!-- <div class="popup" id="popup">
-                <div class="popup-content">
-                    <p>Please fill in all required fields with valid numeric values.</p>
-                    <button class="popup-button" id="close-popup">Close</button>
-                </div>
-            </div> -->
+            <div class="popup-content">
+                <p>Please fill in all required fields with valid numeric values.</p>
+                <button class="popup-button" id="close-popup">Close</button>
+            </div>
+        </div> -->
     </div>
+    <div id="median-salary"></div> <!-- Added this line -->
+    <div id="calculated-salary"></div>
 </body>
 <script>
-    // Wait for DOM content to load before executing scripts
-    document.addEventListener("DOMContentLoaded", function () {
-        // Function to handle currency change
-        function handleCurrencyChange(currency) {
-            var selectedCurrencyElement = document.getElementById('selected-currency');
-            selectedCurrencyElement.textContent = currency;
+    // Define exchange rates globally
+    const exchangeRates = {
+        '$': 1, // USD is the base currency
+        '€': 0.85, // Euro to USD exchange rate
+        '£': 0.75, // British Pound to USD exchange rate
+        '₹': 74.21, // Indian Rupee to USD exchange rate
+        '¥': 114.41 // Japanese Yen to USD exchange rate
+    };
 
-            // Display median salaries if currency is USD or EUR
-            if (currency === '$') {
-                displayMedianSalary('US', 57200);
-            } else if (currency === '€') {
-                displayMedianSalary('UK', 33000);
-            }
+    // Function to display median salary information
+    function displayMedianSalary(country, medianSalary, currency) {
+        document.getElementById('median-salary').innerHTML =
+            '<h2 class="text-xl font-semibold">Median Salary</h2>' +
+            '<p class="mt-2">Median salary in ' + country + ': ' + currency + medianSalary.toFixed(2) + '</p>';
+    }
 
-            // Trigger the change event
-            selectedCurrencyElement.dispatchEvent(new Event('change'));
+    // Function to handle currency change
+    function handleCurrencyChange(currency) {
+        var selectedCurrencyElement = document.getElementById('selected-currency');
+        selectedCurrencyElement.textContent = currency;
+
+        // Display median salaries and update exchange rate
+        switch (currency) {
+            case '$':
+                displayMedianSalary('US', 57200, currency);
+                break;
+            case '€':
+                displayMedianSalary('UK', 33000, currency); // Median salary for EUR
+                break;
+            case '£':
+                displayMedianSalary('UK', 33000, currency); // Median salary for GBP
+                break;
+            case '₹':
+                displayMedianSalary('India', 500000, currency); // Median salary for INR
+                break;
+            case '¥':
+                displayMedianSalary('Japan', 4000000, currency); // Median salary for JPY
+                break;
+            default:
+                break;
         }
 
-        // Function to display median salary information
-        function displayMedianSalary(country, medianSalary) {
-            document.getElementById('median-salary').innerHTML =
-                '<h2 class="text-xl font-semibold">Median Salary</h2>' +
-                '<p class="mt-2">Median salary in ' + country + ': $' + medianSalary.toFixed(2) + '</p>';
+        // Trigger the change event
+        selectedCurrencyElement.dispatchEvent(new Event('change'));
+    }
+
+    // Function to calculate salary
+    function calculateRates() {
+        // Get input values
+        var hourlyWage = parseFloat(document.getElementById('hourly-wage').textContent);
+        var hoursPerWeek = parseFloat(document.getElementById('hours-per-week').value);
+        var weeksPerYear = parseFloat(document.getElementById('weeks-per-year').value);
+        var selectedCurrency = document.getElementById('selected-currency').textContent;
+
+        // Check if any input is empty or not a number
+        if (isNaN(hourlyWage) || isNaN(hoursPerWeek) || isNaN(weeksPerYear)) {
+            // Show popup
+            document.getElementById('popup').style.display = 'flex';
+        } else {
+            // Calculate salary based on the selected currency
+            var annualSalary = hourlyWage * hoursPerWeek * weeksPerYear * exchangeRates[selectedCurrency];
+            var monthlySalary = annualSalary / 12;
+            var weeklyPay = annualSalary / 52;
+
+            // Display calculated salary
+            document.getElementById('calculated-salary').innerHTML =
+                '<h2 class="text-xl font-semibold">Calculated Salary</h2>' +
+                '<p class="mt-2">Annual Salary: ' + selectedCurrency + annualSalary.toFixed(2) + '</p>' +
+                '<p>Monthly Salary: ' + selectedCurrency + monthlySalary.toFixed(2) + '</p>' +
+                '<p>Weekly Pay: ' + selectedCurrency + weeklyPay.toFixed(2) + '</p>';
         }
+    }
 
-        // Function to calculate salary
-        function calculateRates() {
-            // Get input values
-            var hourlyWage = parseFloat(document.getElementById('hourly-wage').textContent);
-            var hoursPerWeek = parseFloat(document.getElementById('hours-per-week').value);
-            var weeksPerYear = parseFloat(document.getElementById('weeks-per-year').value);
+    // Close popup
+    document.getElementById('close-popup').addEventListener('click', function () {
+        document.getElementById('popup').style.display = 'none';
+    });
 
-            // Check if any input is empty or not a number
-            if (isNaN(hourlyWage) || isNaN(hoursPerWeek) || isNaN(weeksPerYear)) {
-                // Show popup
-                document.getElementById('popup').style.display = 'flex';
-            } else {
-                // Calculate salary
-                var annualSalary = hourlyWage * hoursPerWeek * weeksPerYear;
-                var monthlySalary = annualSalary / 12;
-                var weeklyPay = annualSalary / 52;
+    // Handle currency change event
+    document.getElementById('selected-currency').addEventListener('change', function () {
+    });
 
-                // Display calculated salary
-                document.getElementById('calculated-salary').innerHTML =
-                    '<h2 class="text-xl font-semibold">Calculated Salary</h2>' +
-                    '<p class="mt-2">Annual Salary: $' + annualSalary.toFixed(2) + '</p>' +
-                    '<p>Monthly Salary: $' + monthlySalary.toFixed(2) + '</p>' +
-                    '<p>Weekly Pay: $' + weeklyPay.toFixed(2) + '</p>';
-            }
-        }
+    function updateHourlyWageValue() {
+        var slider = document.getElementById('hourly-wage-slider');
+        var hourlyWageSpan = document.getElementById('hourly-wage');
+        hourlyWageSpan.textContent = slider.value;
+    }
 
-        // Close popup
-        document.getElementById('close-popup').addEventListener('click', function () {
-            document.getElementById('popup').style.display = 'none';
-        });
 
-        // Handle currency change event
-        document.getElementById('selected-currency').addEventListener('change', function () {
-            var selectedCurrency = this.textContent;
-            // Define exchange rates manually
-            const exchangeRates = {
-                '$': 1,  // USD is the base currency
-                '€': 0.85, // Euro to USD exchange rate
-                '£': 0.75, // British Pound to USD exchange rate
-                '₹': 74.21, // Indian Rupee to USD exchange rate
-                '¥': 114.41 // Japanese Yen to USD exchange rate
-            };
-
-            // Update exchange rate based on the selected currency
-            setExchangeRate(exchangeRates[selectedCurrency]);
-        });
-
-        // Update hourly wage slider value
-        document.getElementById('hourly-wage-slider').addEventListener('input', function () {
-            document.getElementById('hourly-wage').textContent = this.value;
-        });
-
-        // Event listener for calculate button
-        document.querySelector('.calculate-button').addEventListener('click', calculateRates);
+    // Update hourly wage slider value
+    document.getElementById('hourly-wage-slider').addEventListener('input', function () {
+        document.getElementById('hourly-wage').textContent = this.value;
     });
 </script>
 
